LENSES: Hero and posts

--- a/src/app/pages/cameras/cameras.component.html
+++ b/src/app/pages/cameras/cameras.component.html
@@ -19,7 +19,7 @@
                     <div class="card-body">
                         <h5 class="card-title">{{ post.title }}</h5>
                         <p class="card-text">{{ post.excerpt }}</p>
-                        <a [routerLink]="['/cameras', post.id]" class="btn btn-primary">Leer más</a>
+                        <a [routerLink]="['/cameras', post.id]" class="btn btn-primary">Read More</a>
                     </div>
                 </div>
             </div>
