--- a/src/app/pages/lenses/lenses.component.html
+++ b/src/app/pages/lenses/lenses.component.html
@@ -1,1 +1,28 @@
-<p>lenses works!</p>
+<body>
+    <section class="hero"
+        style="background-image: url('https://d36kjk9ccnuehl.cloudfront.net/app/uploads/2017/11/15H_E-mountLens-FF_All_image-Large.jpg');">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1>LENSES</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="container">
+        <div class="row">
+            <!-- Itera sobre los posts de la categoría de objetivos -->
+            <div class="col-md-4" *ngFor="let post of lensePosts">
+                <div class="card mb-3">
+                    <img [src]="post.thumbnail" class="card-img-top" alt="{{ post.title }}">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ post.title }}</h5>
+                        <p class="card-text">{{ post.excerpt }}</p>
+                        <a [routerLink]="['/lenses', post.id]" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
