--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -14,14 +14,7 @@
                 <h2 (click)="showCameraPosts = !showCameraPosts">▼ CAMERAS ▼</h2>
             </div>
             <div class="col-md-4" *ngFor="let post of cameraPosts" [ngClass]="{ 'd-none': !showCameraPosts }">
-                <div class="card mb-3 d-flex flex-column">
-                    <img [src]="post.thumbnail" class="card-img-top flex-grow-1" alt="{{ post.title }}">
-                    <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">{{ post.title }}</h5>
-                        <p class="card-text flex-grow-1">{{ post.excerpt }}</p>
-                        <a [routerLink]="['/cameras', post.id]" class="btn btn-primary">Read More</a>
-                    </div>
-                </div>
+                <app-post [post]="post"></app-post>
             </div>
 
             <!-- Lenses Category -->
@@ -29,14 +22,7 @@
                 <h2 (click)="showLensPosts = !showLensPosts">▼ LENSES ▼</h2>
             </div>
             <div class="col-md-4" *ngFor="let post of lensPosts" [ngClass]="{ 'd-none': !showLensPosts }">
-                <div class="card mb-3 d-flex flex-column">
-                    <img [src]="post.thumbnail" class="card-img-top flex-grow-1" alt="{{ post.title }}">
-                    <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">{{ post.title }}</h5>
-                        <p class="card-text flex-grow-1">{{ post.excerpt }}</p>
-                        <a [routerLink]="['/lenses', post.id]" class="btn btn-primary">Read More</a>
-                    </div>
-                </div>
+                <app-post [post]="post"></app-post>
             </div>
 
             <!-- Photography Category -->
@@ -44,14 +30,7 @@
                 <h2 (click)="showPhotographyPosts = !showPhotographyPosts">▼ PHOTOGRAPHY ▼</h2>
             </div>
             <div class="col-md-4" *ngFor="let post of photographyPosts" [ngClass]="{ 'd-none': !showPhotographyPosts }">
-                <div class="card mb-3 d-flex flex-column">
-                    <img [src]="post.thumbnail" class="card-img-top flex-grow-1" alt="{{ post.title }}">
-                    <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">{{ post.title }}</h5>
-                        <p class="card-text flex-grow-1">{{ post.excerpt }}</p>
-                        <a [routerLink]="['/photography', post.id]" class="btn btn-primary">Read More</a>
-                    </div>
-                </div>
+                <app-post [post]="post"></app-post>
             </div>
 
             <!-- Filmmaking Category -->
@@ -59,14 +38,7 @@
                 <h2 (click)="showFilmmakingPosts = !showFilmmakingPosts">▼ FILMMAKING ▼</h2>
             </div>
             <div class="col-md-4" *ngFor="let post of filmmakingPosts" [ngClass]="{ 'd-none': !showFilmmakingPosts }">
-                <div class="card mb-3 d-flex flex-column">
-                    <img [src]="post.thumbnail" class="card-img-top flex-grow-1" alt="{{ post.title }}">
-                    <div class="card-body d-flex flex-column">
-                        <h5 class="card-title">{{ post.title }}</h5>
-                        <p class="card-text flex-grow-1">{{ post.excerpt }}</p>
-                        <a [routerLink]="['/filmmaking', post.id]" class="btn btn-primary">Read More</a>
-                    </div>
-                </div>
+                <app-post [post]="post"></app-post>
             </div>
         </div>
     </div>
