--- a/src/app/pages/post-detail/post-detail.component.html
+++ b/src/app/pages/post-detail/post-detail.component.html
@@ -1,1 +1,14 @@
-<p>post-detail works!</p>
+<div *ngIf="post" class="post-details">
+    <div class="hero" [style.backgroundImage]="'url(' + post.thumbnail + ')'">
+
+    </div>
+
+    <div class="author-info">
+        <p class="author-name"><i>{{ post.author }}</i></p>
+        <p class="post-date">{{ post.publishDate | date:'medium' }}</p>
+    </div>
+
+    <h1 class="post-title">{{ post.title }}</h1>
+    <h2 class="post-excerpt">{{ post.excerpt }}</h2>
+    <div class="post-body" [innerHTML]="post.body"></div>
+</div>
