--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -23,20 +23,14 @@
     margin-bottom: 30px;
 }
 
-.btn-primary {
+.btn-warning {
     display: inline-block;
     padding: 10px 20px;
     font-size: 1em;
     text-decoration: none;
-    color: white;
-    background-color: #333;
     border-radius: 5px;
     transition: background-color 0.3s ease;
     border: 0;
-}
-
-.btn-primary:hover {
-    background-color: #555;
 }
 
 /* ---------- CATEGORIES ---------- */
