FORM ROUTE renamed

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,7 +14,7 @@
             </div>
         </div>
 
-        <a routerLink="/form">New Post!</a>
+        <a routerLink="/new">New Post!</a>
 
     </div>
 </nav>
