--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
         <div class="hero-content">
             <h1>Welcome to FLASHCL!CK</h1>
             <p>Your go-to source for photography and filmmaking inspiration</p>
-            <a routerLink="/form" class=" btn btn-warning">Create a New Post!</a>
+            <a routerLink="/new" class=" btn btn-warning">Create a New Post!</a>
         </div>
     </section>
 
