--- a/src/app/pages/cameras/cameras.component.html
+++ b/src/app/pages/cameras/cameras.component.html
@@ -10,6 +10,8 @@
         </div>
     </section>
 
+    <app-post-filter (filterChanged)="onFilterChanged($event)"></app-post-filter>
+
     <div class="container">
         <div class="row">
             <!-- Itera sobre los posts de la categoría de cámaras -->
