--- a/src/app/pages/post-detail/post-detail.component.html
+++ b/src/app/pages/post-detail/post-detail.component.html
@@ -11,4 +11,8 @@
     <h1 class="post-title">{{ post.title }}</h1>
     <h2 class="post-excerpt">{{ post.excerpt }}</h2>
     <div class="post-body" [innerHTML]="post.body"></div>
+
+    <div class="post-actions">
+        <button class="delete-button" (click)="onDeletePost()">Delete</button>
+    </div>
 </div>
