--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -2,7 +2,9 @@
     <img [src]="post.thumbnail" class="card-img-top flex-grow-1" alt="{{ post.title }}">
     <div class="card-body d-flex flex-column">
         <h5 class="card-title">{{ post.title }}</h5>
-        <p class="card-text flex-grow-1">{{ post.excerpt }}</p>
+        <p class="card-text flex-grow-1">
+            {{ post.excerpt.length > 90 ? post.excerpt.substring(0, 90) + '...' : post.excerpt }}
+        </p>
         <a href="javascript:void(0)" class="btn btn-warning" (click)="navigateToPostDetail(post.category, post.id)">Read
             More</a>
     </div>
