--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,5 +1,5 @@
 <div class="card mb-3 d-flex flex-column">
-    <img [src]="post.thumbnail" class="card-img-top flex-grow-1" alt="{{ post.title }}">
+    <img [src]="post.thumbnail" class="card-img-top" alt="{{ post.title }}">
     <div class="card-body d-flex flex-column">
         <h5 class="card-title">{{ post.title }}</h5>
         <p class="card-text flex-grow-1">
