--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,6 +9,9 @@
 
     <div class="container">
         <div class="row">
+            <div class="col-md-12 checkout">
+                <p>↓ CHECK OUT SOME OF OUR LATEST POSTS! ↓</p>
+            </div>
             <!-- Cameras Category -->
             <div class="col-md-12">
                 <h2 (click)="showCameraPosts = !showCameraPosts">▼ CAMERAS ▼</h2>
